Prediction of the intensity of bike traffic

--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -3181,6 +3181,48 @@
     "df_hourly = df_hourly.groupby([pd.to_datetime(df_hourly['hour']).dt.hour, 'name'])['bikes_rental'].median()\n",
     "df_hourly.loc[df_hourly.groupby(level=0).idxmax()]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train_df = x_train_df.astype({'date': 'str'})\n",
+    "df_date = pd.DataFrame({'year': x_train_df['date'].str[0:4],\n",
+    "                 'month': x_train_df['date'].str[4:6],\n",
+    "                 'day': x_train_df['date'].str[6:8],\n",
+    "                 'hour': x_train_df['date'].str[8:10],\n",
+    "                 'minute':x_train_df['date'].str[10:12]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_valid_df = x_valid_df.astype({'date': 'str'})\n",
+    "df_date_valid = pd.DataFrame({'year': x_valid_df['date'].str[0:4],\n",
+    "                 'month': x_valid_df['date'].str[4:6],\n",
+    "                 'day': x_valid_df['date'].str[6:8],\n",
+    "                 'hour': x_valid_df['date'].str[8:10],\n",
+    "                 'minute':x_valid_df['date'].str[10:12]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_test_df = x_test_df.astype({'date': 'str'})\n",
+    "df_date_test = pd.DataFrame({'year': x_test_df['date'].str[0:4],\n",
+    "                 'month': x_test_df['date'].str[4:6],\n",
+    "                 'day': x_test_df['date'].str[6:8],\n",
+    "                 'hour': x_test_df['date'].str[8:10],\n",
+    "                 'minute':x_test_df['date'].str[10:12]})"
+   ]
   }
  ],
  "metadata": {
