Create a heatmap of the number of passings between bike stations

--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -1398,6 +1398,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id_routes = routes.pivot_table(index='ID_A', columns=['ID_B'], values='log_count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(11, 9))\n",
+    "sns.heatmap(id_routes, cmap=\"Reds\", cbar_kws={'label': 'log10 of the number of passes'})"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3196,20 +3215,6 @@
     "ax.plot(x_train_df['date'], x_train_df['rentBikes'], x_train_df['date'], x_train_df['rentBikesPred'])\n",
     "ax.set_xlabel('data')\n",
     "ax.set_ylabel('rentBikes')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_train_df = x_train_df.astype({'date': 'str'})\n",
-    "df_date = pd.DataFrame({'year': x_train_df['date'].str[0:4],\n",
-    "                 'month': x_train_df['date'].str[4:6],\n",
-    "                 'day': x_train_df['date'].str[6:8],\n",
-    "                 'hour': x_train_df['date'].str[8:10],\n",
-    "                 'minute':x_train_df['date'].str[10:12]})"
    ]
   }
  ],
