--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -123,6 +123,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Preparing data for analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -180,7 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2. Loading and joining meteorological data (air temperature and rainfalls)"
+    "### 2.1. Loading and joining meteorological data (air temperature and rainfalls)"
    ]
   },
   {
@@ -665,14 +672,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Preparing data for analysis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2.1. Checking for missing values"
+    "### 2.2. Checking for missing values"
    ]
   },
   {
@@ -1074,7 +1074,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2 Checking outliers"
+    "### 2.3. Checking outliers"
    ]
   },
   {
