Create a map with the most popular bike routes using the Folium library

--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -44,7 +44,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 49.04843592643738 seconds ---\n"
+      "--- 112.57384276390076 seconds ---\n"
      ]
     }
    ],
@@ -1417,6 +1417,59 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "popular_routes_ = bike_track.groupby(['lat_A', 'lng_A', 'station A', 'station B', 'lat_B', 'lng_B',]).size().reset_index(name='count')\n",
+    "popular_routes_ = popular_routes_.sort_values(by=['count'], na_position = 'first', ascending=False).reset_index(drop = True).head(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "popular_routes_ #15 of the most popular routes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pp_map = folium.Map(location=[52.24, 21.00],\n",
+    "    zoom_start=14,)\n",
+    "\n",
+    "\n",
+    "\n",
+    "for ind in popular_routes_.index:     \n",
+    "    tooltip_txt = popular_routes_['station A'][ind]\n",
+    "    tooltip_txt_ = popular_routes_['station B'][ind]\n",
+    "     \n",
+    "    \n",
+    "    folium.Marker([float(popular_routes_['lat_A'][ind]), float(popular_routes_['lng_A'][ind])],\n",
+    "                 icon=folium.Icon(color='red'),\n",
+    "                tooltip= tooltip_txt).add_to(pp_map)\n",
+    "    \n",
+    "    folium.Marker([float(popular_routes_['lat_B'][ind]), float(popular_routes_['lng_B'][ind])],\n",
+    "                 icon=folium.Icon(color='red'),\n",
+    "                tooltip= tooltip_txt_).add_to(pp_map)\n",
+    "    \n",
+    "    \n",
+    "    route_lats_longs = [[float(popular_routes_['lat_A'][ind]), float(popular_routes_['lng_A'][ind])],\n",
+    "                        [float(popular_routes_['lat_B'][ind]), float(popular_routes_['lng_B'][ind])]]\n",
+    "                        \n",
+    "    \n",
+    "    folium.PolyLine(route_lats_longs).add_to(pp_map)\n",
+    "    \n",
+    "pp_map"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1438,6 +1491,235 @@
     "\n",
     "rain_temp_df = pd.concat([temp_df, rain_df['rainfall']], axis = 1)  # combines temperature values with the amount of rainfall"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date_normalize</th>\n",
+       "      <th>temperature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-03-04</td>\n",
+       "      <td>-6.765734</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-03-05</td>\n",
+       "      <td>-1.610714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-03-06</td>\n",
+       "      <td>1.330735</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-03-07</td>\n",
+       "      <td>2.113603</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-03-08</td>\n",
+       "      <td>4.708333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2018-03-09</td>\n",
+       "      <td>3.645833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2018-03-10</td>\n",
+       "      <td>4.672222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2018-03-11</td>\n",
+       "      <td>9.436111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2018-03-12</td>\n",
+       "      <td>10.406944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2018-03-13</td>\n",
+       "      <td>10.550155</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2018-03-14</td>\n",
+       "      <td>5.948322</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2018-03-15</td>\n",
+       "      <td>0.628562</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2018-03-16</td>\n",
+       "      <td>-2.106944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2018-03-17</td>\n",
+       "      <td>-5.133786</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2018-03-18</td>\n",
+       "      <td>-4.869968</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2018-03-19</td>\n",
+       "      <td>-3.301389</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2018-03-20</td>\n",
+       "      <td>-1.068056</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2018-03-21</td>\n",
+       "      <td>-0.231664</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2018-03-22</td>\n",
+       "      <td>1.379861</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2018-03-23</td>\n",
+       "      <td>1.768750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>2018-03-24</td>\n",
+       "      <td>3.188194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>2018-03-25</td>\n",
+       "      <td>4.167391</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>2018-03-26</td>\n",
+       "      <td>4.520519</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>2018-03-27</td>\n",
+       "      <td>1.611780</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>2018-03-28</td>\n",
+       "      <td>1.787605</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>2018-03-29</td>\n",
+       "      <td>2.366271</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>2018-03-30</td>\n",
+       "      <td>6.360797</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>2018-03-31</td>\n",
+       "      <td>6.722857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>2018-04-01</td>\n",
+       "      <td>5.035417</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   date_normalize  temperature\n",
+       "0      2018-03-04    -6.765734\n",
+       "1      2018-03-05    -1.610714\n",
+       "2      2018-03-06     1.330735\n",
+       "3      2018-03-07     2.113603\n",
+       "4      2018-03-08     4.708333\n",
+       "5      2018-03-09     3.645833\n",
+       "6      2018-03-10     4.672222\n",
+       "7      2018-03-11     9.436111\n",
+       "8      2018-03-12    10.406944\n",
+       "9      2018-03-13    10.550155\n",
+       "10     2018-03-14     5.948322\n",
+       "11     2018-03-15     0.628562\n",
+       "12     2018-03-16    -2.106944\n",
+       "13     2018-03-17    -5.133786\n",
+       "14     2018-03-18    -4.869968\n",
+       "15     2018-03-19    -3.301389\n",
+       "16     2018-03-20    -1.068056\n",
+       "17     2018-03-21    -0.231664\n",
+       "18     2018-03-22     1.379861\n",
+       "19     2018-03-23     1.768750\n",
+       "20     2018-03-24     3.188194\n",
+       "21     2018-03-25     4.167391\n",
+       "22     2018-03-26     4.520519\n",
+       "23     2018-03-27     1.611780\n",
+       "24     2018-03-28     1.787605\n",
+       "25     2018-03-29     2.366271\n",
+       "26     2018-03-30     6.360797\n",
+       "27     2018-03-31     6.722857\n",
+       "28     2018-04-01     5.035417"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2276,6 +2558,27 @@
     "rent_temp_df = pd.DataFrame(tot_rent)\n",
     "rent_temp_df = rent_temp_df.reset_index()\n",
     "rent_temp_df = rent_temp_df.rename(columns={0: \"bikes_rental\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'rent_temp_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-34-ce2fc2c5ff33>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mrent_temp_df\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'rent_temp_df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "rent_temp_df"
    ]
   },
   {
