--- a/analysis-and-visualization-for-bike-sharing-systems.ipynb
+++ b/analysis-and-visualization-for-bike-sharing-systems.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Loading the data"
+    "## 1. Loading data"
    ]
   },
   {
@@ -33,6 +33,13 @@
     "from bokeh.io import output_notebook\n",
     "import folium\n",
     "from folium.plugins import MarkerCluster"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.2. Loading data"
    ]
   },
   {
@@ -72,42 +79,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1478785, 16)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "source": [
+    "## 2. Preparing data for analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1. Data preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1478785, 16)\n",
-      "Index(['uid', 'lat', 'lng', 'name', 'spot', 'number', 'bikes', 'bike_racks',\n",
-      "       'free_racks', 'terminal_type', 'bike_numbers', 'bike_types',\n",
-      "       'place_type', 'rack_locks', 'date', 'maintenance'],\n",
-      "      dtype='object')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(df.shape)\n",
     "print(df.columns)"
@@ -115,18 +113,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_ = df.drop(df.columns[[4, 5, 9, 11, 12, 13, 15]], axis = 1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2. Preparing data for analysis"
    ]
   },
   {
@@ -187,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1. Loading and joining meteorological data (air temperature and rainfalls)"
+    "### 2.2. Loading and joining meteorological data (air temperature and rainfalls)"
    ]
   },
   {
@@ -1135,7 +1126,7 @@
     "outpoints_hour_day = warsaw_bikes_rent.pivot_table(index='weekday', \n",
     "                     columns=warsaw_bikes_rent['hour_'], \n",
     "                     values='bikes_rental', \n",
-    "                     aggfunc='sum').boxplot(figsize=(14,8)).set(title = \"Checking outliers\", xlabel = \"Hour\", ylabel = \"Number of bike rentals\")"
+    "                     aggfunc='sum').boxplot(figsize=(14,8)).set(title = \"Checking outliers\", xlabel = \"Hour of day\", ylabel = \"Number of bike rentals\")"
    ]
   },
   {
@@ -1213,7 +1204,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1. Analysis of the popularity of bike routes"
+    "### 3.1. Analysis of popularity of bike routes"
    ]
   },
   {
@@ -1297,7 +1288,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The list of routes can be determined by sorting the data frame by bike numbers and time, and then copying columns from the station data and moving one row up"
+    "The list of routes can be determined by sorting the dataframe by bike numbers and time, and then copying columns from the station data and moving one row up"
    ]
   },
   {
@@ -1757,7 +1748,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.3. Station analysis"
+    "### 3.3. Analysis of bike stations"
    ]
   },
   {
@@ -2562,27 +2553,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'rent_temp_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-34-ce2fc2c5ff33>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mrent_temp_df\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'rent_temp_df' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "rent_temp_df"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
    "outputs": [
@@ -2643,10 +2613,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tot_hour_rent = hourly_rent_.loc[df_ac.index!='name'].sum() # the sum of bikes rented in each hour of each day of the analyzed period\n",
-    "rent_hour_df = pd.DataFrame(tot_hour_rent)\n",
-    "rent_hour_df = rent_hour_df.reset_index()\n",
-    "rent_hour_df = rent_hour_df.rename(columns={0: \"bikes_rental\"})"
+    "tot_hourly_rent = hourly_rent_.loc[df_ac.index!='name'].sum() # the sum of bikes rented in each hour of each day of the analyzed period\n",
+    "rent_hourly_df = pd.DataFrame(tot_hourly_rent)\n",
+    "rent_hourly_df = rent_hourly_df.reset_index()\n",
+    "rent_hourly_df = rent_hourly_df.rename(columns={0: \"bikes_rental\"})"
    ]
   },
   {
@@ -2666,11 +2636,11 @@
     }
    ],
    "source": [
-    "hour_weekday_rent = rent_hour_df.pivot_table(index=rent_hour_df['hour'].dt.hour, \n",
+    "hourly_weekday_rent = rent_hourly_df.pivot_table(index=rent_hourly_df['hour'].dt.hour, \n",
     "                     columns='weekday', \n",
     "                     values='bikes_rental', \n",
     "                     aggfunc='mean')\n",
-    "hour_weekday_rent.plot(figsize=(16,8)).set(title = \"Graph of the dependence of the number of bike rentals depending on the day of the week and time\", ylabel = 'Number of bike rentals', xlabel = 'Hour')\n",
+    "hourly_weekday_rent.plot(figsize=(16,8)).set(title = \"Graph of the dependence of the number of bike rentals depending on the day of the week and time\", ylabel = 'Number of bike rentals', xlabel = 'Hour of day')\n",
     "plt.show()"
    ]
   },
@@ -3255,8 +3225,8 @@
    ],
    "source": [
     "# table with average bike rentals for individual days of the week and hours\n",
-    "hour_weekday_rent.style.background_gradient(cmap='coolwarm', axis=None)\n",
-    "hour_weekday_rent.style.background_gradient(cmap='coolwarm').set_precision(0)"
+    "hourly_weekday_rent.style.background_gradient(cmap='coolwarm', axis=None)\n",
+    "hourly_weekday_rent.style.background_gradient(cmap='coolwarm').set_precision(0)"
    ]
   },
   {
@@ -3386,7 +3356,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.5. Analysis of the popularity of bike stations"
+    "### 3.5. Analysis of popularity of bike stations"
    ]
   },
   {
