--- a/source.ipynb
+++ b/source.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2012,7 +2012,6 @@
     "plt.figure(figsize=(10,7))\n",
     "sns.set(font_scale=1.4, style=\"whitegrid\")\n",
     "sns.distplot(bike_routes['total_minutes'], kde = False, bins = 9, color = 'blue').set(title = 'Histogram of the length of bike rentals', xlabel = 'Length of bike rentals [min]', ylabel = 'Number of bike rentals')\n",
-    "plt.savefig('filenasme.png', dpi=800)\n",
     "plt.show()"
    ]
   },
@@ -3816,7 +3815,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# extracting from the dataset information about stations that have \"Metro\" in the name\n",
+    "# extract from the dataset information about stations that have \"Metro\" in the name\n",
     "metro_bs_df = bikes_df.reset_index()\n",
     "metro_bs_df = metro_bs_df[metro_bs_df.name.str.contains(\"Metro\")]\n",
     "metro_df = metro_bs_df.pivot_table(index='name', columns=['date_', 'temperature', 'rainfall'], values='bikes_rental')\n",
@@ -3897,7 +3896,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# the most popular bike stations on individual days of the week\n",
+    "df_week = warsaw_bikes_rent.groupby(['date_', 'name']).bikes_rental.sum().reset_index()\n",
+    "df_week = df_week.rename(columns = {\"date_\": \"day_of_week\"})\n",
+    "df_week = df_week.groupby([pd.to_datetime(df_week['day_of_week']).dt.dayofweek ,'name'])['bikes_rental'].median()\n",
+    "df_week.loc[df_week.groupby(level=0).idxmax()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pop_hourly = pd.DataFrame(df_hourly)\n",
+    "most_pop_hourly = pop_hourly['bikes_rental'].groupby(level=0, group_keys=False)\n",
+    "most_pop_hourly.nlargest(2) # 2 most popular stations every hour"
+   ]
   }
  ],
  "metadata": {
