--- a/source.ipynb
+++ b/source.ipynb
@@ -3914,6 +3914,27 @@
     "most_pop_hourly = pop_hourly['bikes_rental'].groupby(level=0, group_keys=False)\n",
     "most_pop_hourly.nlargest(2) # 2 most popular stations every hour"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "most_popular_bs = very_popular_bs.tail(15)\n",
+    "map_ = folium.Map(location=[52.24, 21.00],\n",
+    "    zoom_start=14,)\n",
+    "\n",
+    "\n",
+    "for ind in most_popular_bs.index:     \n",
+    "    tooltip_txt = most_popular_bs['name'][ind]\n",
+    "    \n",
+    "  \n",
+    "    folium.Marker([float(most_popular_bs['lat'][ind]), float(most_popular_bs['lng'][ind])],\n",
+    "                 icon=folium.Icon(color='red'),\n",
+    "                tooltip= tooltip_txt).add_to(map_)\n",
+    "map_"
+   ]
   }
  ],
  "metadata": {
