Add an analysis of the length of bike rentals on individual days

--- a/source.ipynb
+++ b/source.ipynb
@@ -2012,6 +2012,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bike_track['day_of_week'] = bike_track['end_time'].dt.day_name() \n",
+    "bike_track['hour_'] = bike_track['end_time'].dt.hour\n",
+    "bike_track['_date'] = pd.to_datetime(bike_track['end_time'].dt.strftime('%Y-%m-%d-%H'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_time_ = bike_track.pivot_table(index=bike_track['hour_'], \n",
+    "                     columns='day_of_week', \n",
+    "                     values='total_minutes')\n",
+    "df_time_ = df_time_.reset_index().rename_axis(None, axis=1)\n",
+    "df_time_  = df_time_.iloc[:, 1:]\n",
+    "meds_ =df_time_.median().sort_values(ascending=False)\n",
+    "df_time_  = df_time_[meds_.index]\n",
+    "df_time_.boxplot(figsize=(10,5)).set(title = \"Długość wypożyczeń rowerów w poszczególne dni tygodnia\", ylabel = \"Długość wypożyczeń [min]\")\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
