--- a/source.ipynb
+++ b/source.ipynb
@@ -4018,21 +4018,50 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bikes_station = pd.DataFrame(meds).reset_index()\n",
+    "bikes_station= bikes_station.rename(columns={\"index\": \"name\", 0: \"median\"})"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bikes_station_warsaw = pd.merge(bikes_station, bikes_station_df_, how = 'left', on = ['name'])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# funcion assigns popularity to stations based on their median rentals\n",
+    "def label_race (row):\n",
+    "    if row['median'] <=10:\n",
+    "        return 'unpopular'\n",
+    "    if row['median'] >= 11 and row['median'] <=24:\n",
+    "        return 'medium_popular'\n",
+    "    if row['median'] >= 25:\n",
+    "        return 'very_popular'\n",
+    "    \n",
+    "bikes_station_warsaw.apply (lambda row: label_race(row), axis=1)\n",
+    "\n",
+    "bikes_station_warsaw['popularity'] = bikes_station_warsaw.apply (lambda row: label_race(row), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unpopular_bs = bikes_station_warsaw[bikes_station_warsaw.popularity == 'unpopular']\n",
+    "medium_popular_bs = bikes_station_warsaw[bikes_station_warsaw.popularity == 'medium_popular']\n",
+    "very_popular_bs = bikes_station_warsaw[bikes_station_warsaw.popularity == 'very_popular']"
+   ]
   }
  ],
  "metadata": {
