--- a/source.ipynb
+++ b/source.ipynb
@@ -2740,7 +2740,7 @@
     "\n",
     "Change the API key below into your personal one\n",
     "\"\"\"\n",
-    "p = gmap(\"AIzaSyAJ6lACZs4QJqOS_xE2uumL_QsEJT_7CUM\", map_options, title=\"Warsaw\")\n",
+    "p = gmap(\"API-key\", map_options, title=\"Warsaw\")\n",
     "\n",
     "source = ColumnDataSource(\n",
     "    data=dict(\n",
@@ -2750,7 +2750,7 @@
     ")\n",
     "p.circle(x=\"lon\", y=\"lat\", size=8, fill_color=\"blue\", fill_alpha=0.8, source=source)\n",
     "\n",
-    "# wyświetla mapę Warszawy z lokalizacją 380 stacji rowerowych\n",
+    "# displays a map of Warsaw with the location of 380 bicycle stations\n",
     "show(p)"
    ]
   },
