--- a/source.ipynb
+++ b/source.ipynb
@@ -3834,7 +3834,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# extract from the dataset information about stations that have \"Metro\" in the name\n",
+    "# extract from the dataset information about stations that have \"Metro\" in the name of the station\n",
     "metro_bs_df = bikes_df.reset_index()\n",
     "metro_bs_df = metro_bs_df[metro_bs_df.name.str.contains(\"Metro\")]\n",
     "metro_df = metro_bs_df.pivot_table(index='name', columns=['date_', 'temperature', 'rainfall'], values='bikes_rental')\n",
