--- a/source.ipynb
+++ b/source.ipynb
@@ -2035,7 +2035,7 @@
     "df_time_  = df_time_.iloc[:, 1:]\n",
     "meds_ =df_time_.median().sort_values(ascending=False)\n",
     "df_time_  = df_time_[meds_.index]\n",
-    "df_time_.boxplot(figsize=(10,5)).set(title = \"Długość wypożyczeń rowerów w poszczególne dni tygodnia\", ylabel = \"Długość wypożyczeń [min]\")\n",
+    "df_time_.boxplot(figsize=(10,5)).set(title = \"Length of bike rentals on individual days of the week\", ylabel = \"Length of rentals [min]\")\n",
     "plt.show()"
    ]
   },
